드래그 불안정 이슈 수정 / 드래그 후 리스트 이동 수정 / 드래그 아이템 크기 고정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["./src/types/global"]
   },
   "include": ["src"],
   "exclude": ["dist", "node_modules", "example"]
