--- a/package.json
+++ b/package.json
@@ -22,6 +22,18 @@
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/realzeroCha/react-dynamic-list.git"
+  },
+  "keywords": [
+    "react",
+    "library",
+    "component",
+    "list"
+  ],
+  "author": "realzero_cha",
+  "license": "MIT",
   "workspaces": [
     "example",
     "src"
