--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-dynamic-list",
-  "version": "1.0.0",
-  "main": "dist/react-dynamic-list.umd.js",
-  "module": "dist/react-dynamic-list.es.js",
+  "name": "@realzero_cha/dynamic-list",
+  "version": "1.0.3",
+  "main": "dist/@realzero_cha/dynamic-list.umd.js",
+  "module": "dist/@realzero_cha/dynamic-list.es.js",
   "types": "dist/index.d.ts",
   "peerDependencies": {
     "react": "^18 || ^19",
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/realzeroCha/react-dynamic-list.git"
+    "url": "https://github.com/realzeroCha/dynamic-list.git"
   },
   "keywords": [
     "react",
